<resources>
    <string name="app_name">Student Management</string>
    <string name="login_text">Masuk</string>
    <string name="org_text">HMDSI</string>
    <string name="org_subtext">Himpunan Mahasiswa Diploma Sistem Informasi</string>
    <string name="change_photo_text">Ganti Foto Profil</string>
    <string name="splashscreen_text">Mengatur Kegiatan\nOrganisasi Lebih Mudah</string>
    <string name="username_label">Nama Pengguna</string>
    <string name="password_label">Kata Sandi</string>
    <string name="new_account_text">REGISTRASI</string>
    <string name="email_label">Alamat Email</string>
    <string name="fullname_label">Nama Lengkap</string>
    <string name="phone_label">No HP</string>
    <string name="line_label">ID Line</string>

    <string name="error_message_username">Masukkan Nama Pengguna</string>
    <string name="error_message_email">Masukkan Alamat Email</string>
    <string name="error_message_password">Masukkan Kata Sandi</string>
    <string name="success_message">Registrasi Berhasil</string>
    <string name="error_username_exists">Username Sudah Tersedia</string>
    <string name="error_password_match">Kata Sandi Tidak Sama</string>
    <string name="error_valid_email_pass">Nama Pengguna atau Kata Sandi Salah</string>
</resources>
