<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterTwoActivity"
    android:background="@color/bgPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="40dp">

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:background="@drawable/app_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/lato"
            android:text="Saatnya Mereka Mengetahuimu"
            android:textColor="#fff"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lato"
            android:text="Silahkan isi formulir di bawah ini \nuntuk informasi akun"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="130dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/fullname_label"
                    android:textColor="@color/lightGreyPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/lato"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingStart="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/phone_label"
                    android:textColor="@color/lightGreyPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/lato"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingStart="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/line_label"
                    android:textColor="@color/lightGreyPrimary"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_edit"
                    android:fontFamily="@font/lato"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingStart="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/lato_light"
                    android:text="Jenis Kelamin"
                    android:textColor="@color/lightGreyPrimary"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="143dp"
                        android:layout_height="wrap_content"
                        android:text="Laki-laki"
                        android:fontFamily="@font/lato"
                        android:textSize="16sp"
                        android:buttonTint="@color/bluePrimary"/>

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="137dp"
                        android:layout_height="wrap_content"
                        android:text="Perempuan"
                        android:fontFamily="@font/lato"
                        android:textSize="16sp"
                        android:buttonTint="@color/bluePrimary"/>
                </RadioGroup>


            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_view_circle_pic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:tint="@color/lightGreySecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_btn_plus_blue"
            android:text="+"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/bg_button_primary"
            android:fontFamily="@font/lato"
            android:text="LANJUT"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>